# S2-LR

./: .gitignore
LR-1/task1/: CMakeLists.txt  main.cpp
LR-1/task1/car/: car.cpp  car.h
LR-1/task1/mainwindow/: mainwindow.cpp  mainwindow.h
LR-1/task1/movingrect/: movingrect.cpp
cpp/LR-1/task1/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
cpp/LR-1/task1-1/: main.cpp
cpp/LR-1/task1/canvas/: canvas.h
cpp/LR-1/task1/car/: car.cpp  car.h
cpp/LR-1/task1/hdr/: Car.h  DrawingWidget.h  MainWindow.h  MovingRectangle.h
cpp/LR-1/task1/mainwindow/: mainwindow.cpp
cpp/LR-1/task1/movingrect/: movingrect.h
cpp/LR-1/task1/src/: Car.cpp  DrawingWidget.cpp  MainWindow.cpp  MovingRectangle.cpp
cpp/LR-1/task2/: CMakeLists.txt  CMakeUserPresets.json  Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  canvas.cpp  canvas.h  main.cpp  shapeinfo.cpp  shapeinfo.h
cpp/LR-1/task2-2/: CMakeLists.txt  canvas.cpp  canvas.h  main.cpp  mainwindow.cpp  mainwindow.h
cpp/LR-1/task2-2/animations/: moveanimation.cpp  moveanimation.h  rotateanimation.cpp  rotateanimation.h  scaleanimation.cpp  scaleanimation.h
cpp/LR-1/task2-2/shapes/: circle.cpp  circle.h  ellipse.cpp  ellipse.h  hexagon.cpp  hexagon.h  polygon.cpp  polygon.h  rectangle.cpp  rhombus.h  shape.h  square.cpp  square.h  star.h
cpp/LR-1/task2/animations/: AnimationController.cpp  AnimationController.h  ShapeAnimator.cpp  ShapeAnimator.h  moveanimation.cpp  moveanimation.h  rotateanimation.cpp  rotateanimation.h  scaleanimation.cpp  scaleanimation.h
cpp/LR-1/task2/circle/: circle.cpp  circle.h
cpp/LR-1/task2/customshape/: customshape.cpp  customshape.h
cpp/LR-1/task2/hexagon/: hexagon.cpp  hexagon.h
cpp/LR-1/task2/mainwindow/: mainwindow.cpp  mainwindow.h
cpp/LR-1/task2/point/: point.h
cpp/LR-1/task2/polygon/: polygon.cpp  polygon.h
cpp/LR-1/task2/rectangle/: rectangle.cpp  rectangle.h
cpp/LR-1/task2/rhombus/: rhombus.cpp  rhombus.h
cpp/LR-1/task2/shape/: shape.cpp  shape.h
cpp/LR-1/task2/shapemanager/: shapemanager.cpp  shapemanager.h
cpp/LR-1/task2/shapes/: Polygon.cpp  Polygon.h  Shape.cpp  Shape.h  circle.cpp  circle.h  ellipse.cpp  ellipse.h  hexagon.h  rectangle.h  rhombus.cpp  rhombus.h  shape.h  square.cpp  square.h  star.cpp  star.h  triangle.cpp  triangle.h
cpp/LR-1/task2/shapes/hdr/: Circle.h  Ellipse.h  Hexagon.h  Rectangle.h  Rhombus.h  Square.h  Star.h  Trapezoid.h  Triangle.h
cpp/LR-1/task2/shapes/src/: Circle.cpp  Ellipse.cpp  Hexagon.cpp  Rectangle.cpp  Rhombus.cpp  Square.cpp  Star.cpp  Trapezoid.cpp  Triangle.cpp
cpp/LR-1/task2/square/: square.cpp  square.h
cpp/LR-1/task2/star/: star.cpp  star.h
cpp/LR-1/task2/triangle/: triangle.cpp  triangle.h
cpp/LR-2/task1/: date.cpp  mainwindow.cpp  mainwindow.h
cpp/LR-2/task2/: mainwindow.cpp  mainwindow.ui  resultdialog.cpp
cpp/LR-2/task3/: main.cpp
cpp/LR-2/task4/: main.cpp
cpp/LR-3/comp/: CMakeLists.txt  main.cpp  task1widget.cpp  task1widget.h  task2widget.cpp  task2widget.h  task3widget.cpp  task3widget.h  task4widget.cpp  task4widget.h  task5widget.cpp  task5widget.h
cpp/LR-3/task1/: CMakeLists.txt  mainwindow.cpp  mainwindow1.h  task1.cpp
cpp/LR-3/task2/: mainwindow.cpp  mainwindow.h
cpp/LR-3/task3/: mainwindow.h  mainwindow3.cpp
cpp/LR-3/task4/: mainwindow.cpp  mainwindow.h  mainwindow4.h
cpp/LR-3/task5/: mainwindow.h  mainwindow5.cpp  task5.cpp
cpp/LR-4/comp/: CMakeLists.txt  main.cpp  task1widget.cpp  task1widget.h  task2widget.cpp  task2widget.h  task3widget.cpp  task3widget.h  vectordemowidget.cpp  vectordemowidget.h
cpp/LR-4/task1/: task1.cpp
cpp/LR-4/task2/: main.cpp
cpp/LR-4/task3/: task3.cpp
cpp/LR-4/task4/: vector.h
cpp/LR-4/task5/: CMakeLists.txt  main.cpp  pair.h  vector.h
cpp/LR-5/Task1-f/: mainwindow.cpp  mainwindow.ui  trainer.cpp  trainer.h  tst_task1.cpp
cpp/LR-5/Task2-f/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mystring.cpp  mystring.h  task2.pro  tst_task2.cpp  tst_task2.pro
cpp/LR-5/Task3-f/: task3.pro  tst_task3.cpp  tst_task3.pro
cpp/LR-5/task1/: c.txt  keyboardwidget.cpp  keyboardwidget.h  languagedata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task1.pro  textdisplay.cpp  textdisplay.h  trainer.cpp  trainer.h  trainermodel.cpp  trainermodel.h  tst_task1.pro
cpp/LR-5/task2/: mainwindow.h  mystring.cpp  mystring.h
cpp/LR-5/task3/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mybitset.cpp  mybitset.h
cpp/LR-6/task1/: inputdialog.cpp  inputdialog.h  mainwindow.cpp  mainwindow.h
cpp/LR-6/task2/: CMakeLists.txt  inputdialog.cpp  inputdialog.h  mainwindow.cpp  mainwindow.h
cpp/LR-7/task1/: CMakeLists.txt  deque.cpp  deque.h  mainwindow.cpp  mainwindow.h  ring.cpp  ring.h
cpp/LR-7/task2/: CMakeLists.txt  bst.cpp  bst.h  mainwindow.cpp  mainwindow.h
cpp/LR-7/task3/: CMakeLists.txt  hashtable.h  mainwindow.cpp  mainwindow.h
cpp/LR-7/task4/: CMakeLists.txt  hashtable.h  mainwindow.cpp  mainwindow.h
cpp/LR-7/task5/: CMakeLists.txt  deque.h  mainwindow.cpp  mainwindow.h
cpp/LR-8/task1/: bst.cpp  bst.h  mainwindow.cpp  mainwindow.h
cpp/LR-8/task2/: CMakeLists.txt
cpp/LR-8/task2/ArrayHeapLib/: ArrayHeap.cpp  ArrayHeap.h
cpp/LR-8/task2/HeapDemo/: mainwindow.cpp  mainwindow.h
cpp/LR-8/task2/ListHeapLib/: ListHeap.cpp  ListHeap.h
cpp/LR-8/task3/: CMakeLists.txt  bst.h  bst_impl.h  mainwindow.cpp  mainwindow.h  map.h  set.h  unordered_map.h
cpp/lr-2/task1/: date.h  dates.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/lr-2/task2/: example.txt  mainwindow.cpp  mainwindow.h  resultdialog.h  student.cpp  student.h
cpp/lr-2/task2-F/: component.cpp  component.h  configresultdialog.cpp  configresultdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/lr-2/task3/: Expression.cpp  Task3  binaryop.h  check.cpp  expression.h  main  main.cpp  number.cpp  number.h
cpp/lr-2/task3-f/: binaryop.cpp
cpp/lr-2/task4/: main.cpp
csharp/LR-1/: LR-1.docx
csharp/LR-4/: Depend.cs  Program.cs
csharp/LR-5/: main.cs
csharp/LR-6/: main.cs
csharp/LR-7/: main.cs  matrix.cs
csharp/LR-8/: main.cs
csharp/LR-9/: main.cs
(+37 files in other folders)
